syntax = "proto3";

package auth;

option go_package = "auth-service/api/proto;proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}
